--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AluraBooks</title>
+  <title>C.C.Hunter</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
         </li>
       </ul>
       <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-      <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
+      <h1 class="container__titulo"><b class="container__titulo--negrito">C.C.Hunter</h1>
 
       <ul class="opções">
         <input type="checkbox" id="opções-menu" class="opções__botão" />
@@ -85,13 +85,13 @@
   </header>
 
   <section class="banner">
-    <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-    <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+    <h2 class="banner__titulo">Quer começar?</h2>
+    <p class="banner__texto">Encontre em nossa estante o que precisa!! </p>
     <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
   </section>
 
   <section class="carrossel">
-    <h2 class="carrossel__titulo">Novos lançamentos</h2>
+    <h2 class="carrossel__titulo">Opções variadas</h2>
 
     <div class="carrossel__container">
       <!-- Slider main container -->
@@ -101,12 +101,9 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg"
-              alt="Livro sobre liderança em design design da alura books"></div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
-          </div>
+          <div class="swiper-slide"><img src="img/arrancadadomeumundo.jpg"
+          <div class="swiper-slide"><img src="img/Revelada.jpg"
+          <div class="swiper-slide"><img src="img/eueessemeucoração.webp" 
           <div class="swiper-slide">
             <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
           </div>
@@ -128,7 +125,7 @@
         <div class="card__descrição">
           <div class="descrição">
             <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+            <h2 class="descrição__titulo-livro">Unspoken e Eternal</h2>
             <p class="descrição__texto">
               Construindo uma aplicação integrada com a plataforma do Google.
             </p>
@@ -162,15 +159,9 @@
 
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
-          </div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
-          </div>
-          <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
-          <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
-          <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+          <div class="swiper-slide"><img src="img/eueessemeucoração"
+          <div class="swiper-slide"><img src="img/thisofmine.webp" 
+          <div class="swiper-slide"><img src="img/unspoken-28.jpg" 
         </div>
 
         <!-- If we need navigation buttons -->
@@ -186,12 +177,11 @@
             <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
             <h3 class="descrição__titulo">Autora do Mês</h3>
             <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
-              Front-End.
+            <p class="descrição__texto">C. C. Hunter, nome artístico de Christie Craig Hunter (Alabama, ?) é uma romancista norte-americana.
             </p>
           </div>
           <!-- 2º coluna -->
-          <img src="img/Escritora.svg" class="descrição__imagem">
+          <img src="img/cchunter.png" class="descrição__imagem">
         </div>
 
         <!-- 2º linha -->
