--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a href="#" class="lista-menu__link">Design & UX</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+      <img src="img/capasdelivros.webp" alt="Logo de capasdelivros" class="container__imagem">
       <h1 class="container__titulo"><b class="container__titulo--negrito">C.C.Hunter</h1>
 
       <ul class="opções">
@@ -176,7 +176,7 @@
           <div class="descrição">
             <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
             <h3 class="descrição__titulo">Autora do Mês</h3>
-            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+            <h2 class="descrição__titulo-livro">C.C. Hunter</h2>
             <p class="descrição__texto">C. C. Hunter, nome artístico de Christie Craig Hunter (Alabama, ?) é uma romancista norte-americana.
             </p>
           </div>
@@ -241,7 +241,7 @@
   <hr />
 
   <footer class="rodapé">
-    <h2 class="rodapé__titulo">Grupo Alura</h2>
+    <h2 class="rodapé__titulo">Grupo Hunters</h2>
     <ul class="lista-rodapé">
       <li class="lista-rodapé__titulo">Educação</li>
       <li class="lista-rodapé__item">
@@ -265,20 +265,8 @@
         <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
       </li>
       <li class="lista-rodapé__item">
-        <img src="img/AluraLATAM.svg" alt="Logo da Alura Latam" />
-        <a href="#" class="lista-rodapé__link">Alura LATAM</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraStart.svg" alt="Logo da Alura START" />
-        <a href="#" class="lista-rodapé__link">Alura Start</a>
-      </li>
-      <li class="lista-rodapé__item">
         <img src="img/MusicDot.svg" alt="Logo da Music Dot" />
         <a href="#" class="lista-rodapé__link">Music Dot</a>
-      </li>
-      <li class="lista-rodapé__item">
-        <img src="img/AluraLingua.svg" alt="Logo da Alura Lingua" />
-        <a href="#" class="lista-rodapé__link">Alura Língua</a>
       </li>
       <li class="lista-rodapé__item">
         <img src="img/PM3.svg" alt="Logo da PM3" />
