--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
           <a href="#" class="lista-menu__link">Design & UX</a>
         </li>
       </ul>
-      <img src="img/capasdelivros.webp" alt="Logo de capasdelivros" class="container__imagem">
       <h1 class="container__titulo"><b class="container__titulo--negrito">C.C.Hunter</h1>
 
       <ul class="opções">
@@ -104,16 +103,8 @@
           <div class="swiper-slide"><img src="img/arrancadadomeumundo.jpg"
           <div class="swiper-slide"><img src="img/Revelada.jpg"
           <div class="swiper-slide"><img src="img/eueessemeucoração.webp" 
-          <div class="swiper-slide">
-            <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
-          </div>
-          <div class="swiper-slide">
-            <img src="img/Portugol.svg" alt="Livro sobre portugol" />
-          </div>
-          <div class="swiper-slide">
-            <img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade" />
-          </div>
-        </div>
+                                      
+                                      </div>
 
         <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
@@ -159,9 +150,9 @@
 
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/eueessemeucoração"
-          <div class="swiper-slide"><img src="img/thisofmine.webp" 
-          <div class="swiper-slide"><img src="img/unspoken-28.jpg" 
+          <div class="swiper-slide"><img src="eueessemeucoração"
+          <div class="swiper-slide"><img src="thisofmine.webp" 
+          <div class="swiper-slide"><img src="unspoken-28.jpg" 
         </div>
 
         <!-- If we need navigation buttons -->
