--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/arrancadadomeumundo.jpg"
-          <div class="swiper-slide"><img src="img/Revelada.jpg"
-          <div class="swiper-slide"><img src="img/eueessemeucoração.webp" 
+          <div class="swiper-slide"><img src="arrancadadomeumundo.jpg"
+          <div class="swiper-slide"><img src="Revelada.jpg"
+          <div class="swiper-slide"><img src="eueessemeucoração.webp" 
                                       
                                       </div>
 
