--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </p>
           </div>
           <!-- 2º coluna -->
-          <img src="img/cchunter.png" class="descrição__imagem">
+          <img src="cchunter.png" class="descrição__imagem">
         </div>
 
         <!-- 2º linha -->
